# oyster-control-plane

./: .gitignore  Cargo.toml  Makefile  README.md  build-amd64.sh  build-arm64.sh  go.mod  go.sum  main.go
cmd/: realtime.go  root.go
db/migrations/: 000001_setup_dev_db.down.sql  000001_setup_dev_db.up.sql
logger/: logger.go
scripts/: setup_migrate.sh  start_db.sh
src/: ami.rs  aws.rs  enclaver.rs  launcher.rs  lib.rs  main.rs  market.rs  server.rs  test.rs
tests/: server_test.rs
util/: common.go  common_test.go
version/: version.go
