[package]
name = "control-plane"
version = "0.1.0"
edition = "2021"

[lib]
name = "cp"
path = "src/lib.rs"

[[bin]]
name = "ami"
path = "src/ami.rs"

[[bin]]
name = "enclaver"
path = "src/enclaver.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.19.0"
aws-types = "1.1.5"
axum = "0.6.20"
clap = { version = "4.0.29", features = ["derive"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.11.13", features = ["rustls-tls"], default-features = false }
serde = "1.0.159"
serde_json = "1.0.88"
ssh-key = { version = "0.5.1", features = ["ed25519"] }
ssh2 = { version = "0.9.3", features = ["vendored-openssl"] }
tokio = { version = "1.21.1", features = ["full", "test-util"] }
tokio-stream = "0.1"
whoami = "0.2.0"

[dev-dependencies]
httpc-test = "0.1.5"

[profile.release]
lto = true
